<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_title">Air Pollution Monitoring</string>
    <string name="app_name">Air Pollution Monitoring</string>
    <string name="refreshing">Searching Device...</string>
    <string name="carbon_monoxide">CO</string>
    <string name="co_value">NA</string>
    <string name="sulpher_dioxide">SO2</string>
    <string name="nitrigon_oxide">NO2</string>
    <string name="xAxisLabel">Time Frame (10 Sec)</string>

    <string-array name="syncFrequency">
        <item name="1">Mobile data and WiFi</item>
        <item name="2">WiFi Only</item>
        <item name="0">Never</item>
    </string-array>

    <string-array name="syncFrequencyValues">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="0">0</item>
    </string-array>
</resources>
