<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circular="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffdffff">

    <TextView
        android:id="@+id/demoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#ff5db8ff"
        android:editable="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/progressBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/demoTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/refreshing"
        android:padding="8dp"
        android:textSize="18sp"
        android:textColor="#ff15d6ff" />
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBarTitle"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:indeterminate="true" />
    
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:background="#eeeeee" />

    <!--<TextView-->
        <!--android:id="@+id/consoleText"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/separator" />-->

    <ScrollView
        android:id="@+id/demoScroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator" >

        <TextView
        android:id="@+id/consoleText"
        android:textIsSelectable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="monospace" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/carbon_monoxide"
        android:id="@+id/carbon_monoxide"
        android:textColor="#ff1a5dff"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/demoTitle"
        android:layout_alignStart="@+id/demoTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/co_value"
        android:id="@+id/co_value"
        android:textColor="#ff00d477"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/demoScroller"
        android:layout_toLeftOf="@+id/progressBarTitle"
        android:layout_toStartOf="@+id/progressBarTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sulpher_dioxide"
        android:textColor="#ff1a5dff"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/carbon_monoxide"
        android:layout_alignRight="@+id/demoTitle"
        android:layout_alignEnd="@+id/demoTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff00d477"
        android:text="NA"
        android:id="@+id/so2_value"
        android:layout_alignTop="@+id/co_value"
        android:layout_alignRight="@+id/progressBarTitle"
        android:layout_alignEnd="@+id/progressBarTitle" />


    <com.lylc.widget.circularprogressbar.CircularProgressBar
        android:id="@+id/coBar"
        style="@style/Widget.ProgressBar.CircularProgressBar"
        android:layout_width="110dip"
        android:layout_height="110dip"
        circular:cpb_subtitle="ppm"
        circular:cpb_title="CO"
        android:layout_alignTop="@+id/so2Bar"
        android:layout_alignRight="@+id/carbon_monoxide"
        android:layout_alignEnd="@+id/carbon_monoxide" />

    <com.lylc.widget.circularprogressbar.CircularProgressBar
        android:id="@+id/so2Bar"
        style="@style/Widget.ProgressBar.CircularProgressBar"
        android:layout_width="110dip"
        android:layout_height="110dip"
        circular:cpb_subtitle="ppm"
        circular:cpb_title="SO2"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>